Webp Images and Parallax Overlay
Updated all the images to be be .webp to help with SEO and load times.  Also updated al the links to the images.

Seperated the Parallax Overlay from being the a ::before pseudo element (since Razor does not properly serve pseudo elements) into its own global .parallax-overlay class which allows me to adjust the parallax overlay on each individual page.

--- a/Pages/About-Us.cshtml
+++ b/Pages/About-Us.cshtml
@@ -20,6 +20,7 @@
 </section>
 
 <div id="MainContent" class="parallax-group parallax-bg">
+    <div class="parallax-opacity" aria-hidden="true"></div>
     <section id="OurStory" class="container">
         <div class="glass-panel p-3 p-md-5">
             <h2 class="text-center mb-3">Our Story</h2>
@@ -39,7 +40,7 @@
                     </p>
                 </div>
                 <div class="d-none d-xl-block col-xl-4 overflow-hidden">
-                    <img src="/img/metro-point-aerial.jpg" alt="Aerial view of Metro Point and South Coast Plaza" class="img-fluid h-100 object-fit-cover rounded" loading="lazy" srcset="/img/metro-point-aerial.jpg 500w" sizes="(min-width: 1200px) 380px, 100vw" />
+                    <img src="/img/metro-point-aerial.webp" alt="Aerial view of Metro Point and South Coast Plaza" class="img-fluid h-100 object-fit-cover rounded" loading="lazy" srcset="/img/metro-point-aerial.webp 500w" sizes="(min-width: 1200px) 380px, 100vw" />
                 </div>
             </div>
         </div>
