--- a/Pages/About-Us.cshtml.css
+++ b/Pages/About-Us.cshtml.css
@@ -1,5 +1,5 @@
 /* Parallax Styles */
-.parallax-bg { background-image: url("/img/background_5.jpg"); }
+.parallax-bg { background-image: url("/img/background_3.webp"); }
 
 /* Our Story Section */
 #OurStory .card { background-color: transparent; }
