--- a/Pages/Contact-Us.cshtml.css
+++ b/Pages/Contact-Us.cshtml.css
@@ -1,5 +1,5 @@
 /* Parallax Styles */
-.parallax-bg { background-image: url("/img/background_1.jpg"); }
+.parallax-bg { background-image: url("/img/background_2.webp"); }
 
 /* iFrame Styles */
 iframe {
