--- a/Pages/FAQ.cshtml
+++ b/Pages/FAQ.cshtml
@@ -16,6 +16,7 @@
 </section>
 
 <div id="MainContent" class="parallax-group parallax-bg">
+    <div class="parallax-opacity" aria-hidden="true"></div>
     <section id="FAQContent" class="container">
 
         <div class="pb-5 text-end">
