--- a/Pages/Glossary.cshtml.css
+++ b/Pages/Glossary.cshtml.css
@@ -1,5 +1,5 @@
 /* Parallax Background Image */
-.parallax-bg { background-image: url("/img/background_4.jpg"); }
+.parallax-bg { background-image: url("/img/background_5.webp"); }
 
 /* Hero Section */
 #HeroSection {
