--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -22,13 +22,14 @@
 </section>
 
 <div id="MainContent" class="parallax-group parallax-bg">
+    <div class="parallax-opacity" aria-hidden="true"></div>
     <section id="ProtectYourBusiness" class="container">
         <div class="glass-panel p-3 p-md-5">
             <h2 class="text-center mb-5">Protect Your Business While Keeping Your Peace of Mind</h2>
             <div class="card mb-3">
                 <div class="row g-0">
                     <div class="d-none d-xl-block col-xl-3 overflow-hidden">
-                        <img src="/img/costa-mesa-building-large.jpg" alt="Protect your business" class="img-fluid h-100 object-fit-cover rounded" loading="lazy" srcset="/img/costa-mesa-building-large.jpg 1200w" sizes="(min-width: 1200px) 300px, 100vw" />
+                        <img src="/img/costa-mesa-building-large.webp" alt="Protect your business" class="img-fluid h-100 object-fit-cover rounded" loading="lazy" srcset="/img/costa-mesa-building-large.webp 1200w" sizes="(min-width: 1200px) 300px, 100vw" />
                     </div>
                     <div class="col-xl-9 ps-xl-4">
                         <div class="card-body py-xl-0">
@@ -51,7 +52,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/man-in-suit-holding-cyber-security-shield.jpg" alt="Professional holding a digital shield representing cybersecurity protection." loading="lazy" srcset="/img/man-in-suit-holding-cyber-security-shield.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/man-in-suit-holding-cyber-security-shield.webp" alt="Professional holding a digital shield representing cybersecurity protection." loading="lazy" srcset="/img/man-in-suit-holding-cyber-security-shield.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Managed Cybersecurity</h4>
@@ -62,7 +63,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/man-and-woman-reviewing-on-a-monitor.jpg" alt="IT professionals reviewing security data on a computer monitor." loading="lazy" srcset="/img/man-and-woman-reviewing-on-a-monitor.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/man-and-woman-reviewing-on-a-monitor.webp" alt="IT professionals reviewing security data on a computer monitor." loading="lazy" srcset="/img/man-and-woman-reviewing-on-a-monitor.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Help Desk</h4>
@@ -73,7 +74,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/security-lab-with-man-reviewing-monitors.jpg" alt="Security operations professional monitoring network activity and threat detection systems." loading="lazy" srcset="/img/security-lab-with-man-reviewing-monitors.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/security-lab-with-man-reviewing-monitors.webp" alt="Security operations professional monitoring network activity and threat detection systems." loading="lazy" srcset="/img/security-lab-with-man-reviewing-monitors.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Penetration Testing</h4>
@@ -94,7 +95,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/oc-local-map.jpg" alt="Aerial view map of Orange County, California highlighting local businesses." loading="lazy" srcset="/img/oc-local-map.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/oc-local-map.webp" alt="Aerial view map of Orange County, California highlighting local businesses." loading="lazy" srcset="/img/oc-local-map.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Local</h4>
@@ -105,7 +106,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/office-working-looking-in-distance.jpg" alt="Professional woman in office setting looking thoughtfully into the distance." loading="lazy" srcset="/img/office-working-looking-in-distance.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/office-working-looking-in-distance.webp" alt="Professional woman in office setting looking thoughtfully into the distance." loading="lazy" srcset="/img/office-working-looking-in-distance.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">No Cyberspeak</h4>
@@ -116,7 +117,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="overflow-hidden">
-                            <img src="/img/cyber-team-looking-at-monitors.jpg" alt="Cybersecurity team monitoring security operations on multiple computer screens." loading="lazy" srcset="/img/cyber-team-looking-at-monitors.jpg 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
+                            <img src="/img/cyber-team-looking-at-monitors.webp" alt="Cybersecurity team monitoring security operations on multiple computer screens." loading="lazy" srcset="/img/cyber-team-looking-at-monitors.webp 400w" sizes="(min-width: 992px) 300px, (min-width: 768px) 500px, 100vw" />
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Fast Response</h4>
