--- a/Pages/Services-Overview.cshtml.css
+++ b/Pages/Services-Overview.cshtml.css
@@ -1,5 +1,5 @@
 /* Parallax Background Image */
-.parallax-bg { background-image: url("/img/background_6.jpg"); }
+.parallax-bg { background-image: url("/img/background_4.webp"); }
 
 /* Local Cybersecurity Section */
 #LocalCybersecurity h1,
