--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-xl navbar-toggleable-xl navbar-dark px-3" aria-label="Main navigation">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="/img/logo-company-name-horizontal-dark.png" alt="Simple Cyber Technology - Home" class="navbar-logo" /></a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="/img/logo-company-name-horizontal-dark.webp" alt="Simple Cyber Technology - Home" class="navbar-logo" /></a>
                 <button class="button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarNav"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -122,7 +122,7 @@
                     </ul>
                 </div>
                 <div class="col-auto mx-auto mx-xl-0 order-lg-1">
-                    <div class="mb-4"><img src="/img/logo-company-name-horizontal-dark.png" alt="Simple Cyber Tech Logo" class="footer-logo img-fluid" loading="lazy"/></div>
+                    <div class="mb-4"><img src="/img/logo-company-name-horizontal-dark.webp" alt="Simple Cyber Tech Logo" class="footer-logo img-fluid" loading="lazy"/></div>
                     <ul class="list-inline d-flex justify-content-between">
                         <li class="list-inline-item">
                             <a href="https://www.linkedin.com/company/simplecybertech/" target="_blank" rel="noopener noreferrer" class="text-decoration-none d-flex align-items-center" aria-label="Visit Simple Cyber Technology on LinkedIn">
