--- a/Pages/index.cshtml.css
+++ b/Pages/index.cshtml.css
@@ -2,7 +2,7 @@
 #HeroSection { max-height: 750px; }
 
 /* Parallax Background Image */
-.parallax-bg { background-image: url("/img/oc-it-solutions-with-secure-circle-and-shield-horizontal.jpg"); }
+.parallax-bg { background-image: url("/img/background_1.webp"); }
 
 /* Protect Your Business */
 #ProtectYourBusiness .card { background-color: transparent; }
