--- a/Pages/Contact-Us.cshtml
+++ b/Pages/Contact-Us.cshtml
@@ -20,6 +20,7 @@
 </section>
 
 <div id="MainContent" class="parallax-group parallax-bg">
+    <div class="parallax-opacity" aria-hidden="true"></div>
     <section id="ContactSection" class="container">
         <div class="glass-panel text-center p-3 p-md-5 my-5">
             <h2>Get In Touch With Us</h2>
