--- a/Pages/Services-Overview.cshtml
+++ b/Pages/Services-Overview.cshtml
@@ -20,6 +20,7 @@
 </section>
 
 <div id="MainContent" class="parallax-group parallax-bg">
+    <div class="parallax-opacity" aria-hidden="true"></div>
     <section id="HelpDeskSupport" class="container">
         <div class="glass-panel p-3 p-md-5">
             <h2 class="text-center mb-3">Help Desk: Friendly, Fast Support When You Need It</h2>
