--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -259,21 +259,22 @@ a:hover { color: var(--sct-silver); }
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 0;
     padding-bottom: 6rem;
+    z-index: 0;
 }
 
-.parallax-group::before {
+.parallax-opacity {
     content: "";
     position: absolute;
     inset: 0;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .parallax-group > section {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     padding-top: 6rem;
 }
 
