Resized Images for SEO
Went through and resized all the image to be closer to their size on the biggest desktop size.

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -104,8 +104,7 @@
                     <ul class="list-unstyled">
                         <li>949 South Coast Drive, Suite 280</li>
                         <li>Costa Mesa, CA 92626</li>
-                        <li><a href="tel:9495206805">(949) 520-6805</a></li>
-                        <br />
+                        <li class="mb-3"><a href="tel:9495206805">(949) 520-6805</a></li>
                         <li>Mon-Fri: 8am - 6pm (PST)</li>
                         <li>Sat-Sun: Closed</li>
                     </ul>
