--- a/Pages/Privacy-Policy.cshtml
+++ b/Pages/Privacy-Policy.cshtml
@@ -16,7 +16,7 @@
 
     <section id="MainContent">  
         <h3>1. Introduction</h3>
-        <p>Simple Cyber Technology ("we," "our," or "us") is committed to protecting the privacy and security of the data we collect. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or engage our cybersecurity services.</p>
+        <p>Simple Cyber Technology ("we," "our," or "us") is committed to protecting the privacy and security of the data we collect. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website and/or engage our cybersecurity services.</p>
     </section>
 
     <section>
@@ -30,6 +30,7 @@
                 <li>Usage data and analytics</li>
             </ul>
         </p>
+        <p>California residents have the right to know what personal information we collect, how it is used, and whether it is sold. We do not sell the personal information of our users.</p>
     </section>
 
     <section>
@@ -48,6 +49,7 @@
     <section>
         <h3>4. Data Security</h3>
         <p>As a cybersecurity provider, we implement industry-standard technical and organizational measures to protect your data. We employ encryption, access controls, regular security assessments, and employee training to safeguard your information. However, no method of transmission over the internet is 100% secure, and we cannot guarantee absolute security.</p>
+        <p>In other words, while we implement reasonable security measures, we cannot guarantee absolute security and are not liable for unauthorized access or disclosure of your information.</p>
     </section>
 
     <section>
